# ci-farm

./: .gitignore  LICENSE  README.md  pyproject.toml
.cursor/rules/: update-readme.mdc
ci_farm/: __init__.py  builder.py  cli.py  config.py  monitor.py  slave.py
examples/: ci-farm.yaml.example  project-config.yaml.example
